--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ Library/cache/*
 Library/metadata/*
 Library/previews/*
 Library/ScriptAssemblies/*
+Library/ShaderCache/*
 
 AnnotationManager
 assetDatabase3
