Updated the gitignore to ignore more mac files
I knew this was comming. Macs create a lot of shit files

--- a/.gitignore
+++ b/.gitignore
@@ -41,10 +41,30 @@ CurrentLayout.dwlt
 # Anti Os fuckup
 #  Mac os (Sucks)
 .DS_Store
-.DS_Store?
+.AppleDouble
+.LSOverride
+
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
 ._*
+
+# Files that might appear in the root of a volume
+.DocumentRevisions-V100
+.fseventsd
 .Spotlight-V100
+.TemporaryItems
 .Trashes
+.VolumeIcon.icns
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
 
 #  Windows os (Suck a little less)
 ehthumbs.db
