--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ Library/metadata/*
 Library/previews/*
 Library/ScriptAssemblies/*
 Library/ShaderCache/*
+Library/*.log
 
 AnnotationManager
 assetDatabase3
