--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ EditorSettings.asset
 EditorUserBuildSettings.asset
 expandedItems
 FailedAssetImports.txt
+CrashedAssetImports.txt
 guidmapper
 InspectorExpandedItems.asset
 MonoManager.asset
