Added new fonts and Animations

--- a/FrameDrop.CSharp.csproj
+++ b/FrameDrop.CSharp.csproj
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\characterController.cs" />
+    <Compile Include="Assets\Scripts\splashScreen.cs" />
     <Compile Include="Assets\ShaderForge\Example Assets\Scripts\EditorLabel.cs" />
     <Compile Include="Assets\ShaderForge\Example Assets\Scripts\EnableCameraDepthInForward.cs" />
   </ItemGroup>
