--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,16 @@ Library/previews/*
 Library/ScriptAssemblies/*
 Library/ShaderCache/*
 Library/*.log
+Library/AssetImportState
+Library/AssetServerCacheV3
+Library/FailedAssetImports.txt
+Library/ScriptAssemblies
+Library/ScriptMapper
+Library/assetDatabase3
+Library/expandedItems
+Library/guidmapper
+Library/CurrentLayout.dwlt
+
 
 AnnotationManager
 assetDatabase3
@@ -87,3 +97,7 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+
+#Custom
+*.log
