Added a gitignore for more stuff

--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ Library/ScriptMapper
 Library/assetDatabase3
 Library/expandedItems
 Library/guidmapper
-Library/CurrentLayout.dwlt
+Library/CurrentLayout.*
 
 
 AnnotationManager
